// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MovieCard integration tests is a snapshot with English localization 1`] = `
<div
  class="flex flex-col relative overflow-hidden "
  data-testid="test-movie-card"
>
  <a
    class="block relative group aspect-[16/9]"
    href="/movies/1"
  >
    <div
      class="relative h-full overflow-hidden bg-neutral-200 dark:bg-dark-neutral-300 object-cover rounded-3 transition-colors duration-150"
    >
      <div
        aria-hidden="true"
        class="bg-neutral-400 dark:bg-dark-neutral-300 max-w-full transition-colors duration-150  [&]:absolute top-0 left-0 z-100 relative overflow-hidden isolate before:absolute before:inset-0 before:-translate-x-full before:animate-skeleton before:bg-gradient-to-r before:from-transparent before:via-neutral-0/50 dark:before:via-neutral-0/25 before:to-transparent before:transition-colors before:duration-150"
        style="width: 100%; height: 100%;"
      />
      <img
        alt="alternative text"
        data-nimg="fill"
        decoding="async"
        loading="lazy"
        sizes="100vw"
        src="http://localhost/_next/image?url=%2F&w=3840&q=75"
        srcset="/_next/image?url=%2F&w=640&q=75 640w, /_next/image?url=%2F&w=750&q=75 750w, /_next/image?url=%2F&w=828&q=75 828w, /_next/image?url=%2F&w=1080&q=75 1080w, /_next/image?url=%2F&w=1200&q=75 1200w, /_next/image?url=%2F&w=1920&q=75 1920w, /_next/image?url=%2F&w=2048&q=75 2048w, /_next/image?url=%2F&w=3840&q=75 3840w"
        style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; object-fit: cover; color: transparent;"
      />
    </div>
    <span
      aria-label="Popularity"
      class="absolute z-200 top-0 left-0 w-10 h-10 overflow-hidden flex items-center justify-center rounded-1 border-2 border-blue-700 dark:border-blue-400 bg-neutral-200 dark:bg-dark-neutral-300 text-blue-700 dark:text-blue-300 font-bold transition-colors duration-150 transition-colors duration-150"
    >
      80
    </span>
  </a>
  <div
    class="absolute left-0 w-full flex flex-col p-2 bg-gradient-to-t z-100 duration-150  bottom-0 from-neutral-100/95 to-neutral-100/50 dark:from-dark-neutral-100/95 dark:to-dark-neutral-100/40"
  />
</div>
`;

exports[`MovieCard integration tests is a snapshot with Russian localization 1`] = `
<div
  class="flex flex-col relative overflow-hidden "
  data-testid="test-movie-card"
>
  <a
    class="block relative group aspect-[16/9]"
    href="/movies/1"
  >
    <div
      class="relative h-full overflow-hidden bg-neutral-200 dark:bg-dark-neutral-300 object-cover rounded-3 transition-colors duration-150"
    >
      <div
        aria-hidden="true"
        class="bg-neutral-400 dark:bg-dark-neutral-300 max-w-full transition-colors duration-150  [&]:absolute top-0 left-0 z-100 relative overflow-hidden isolate before:absolute before:inset-0 before:-translate-x-full before:animate-skeleton before:bg-gradient-to-r before:from-transparent before:via-neutral-0/50 dark:before:via-neutral-0/25 before:to-transparent before:transition-colors before:duration-150"
        style="width: 100%; height: 100%;"
      />
      <img
        alt="alternative text"
        data-nimg="fill"
        decoding="async"
        loading="lazy"
        sizes="100vw"
        src="http://localhost/_next/image?url=%2F&w=3840&q=75"
        srcset="/_next/image?url=%2F&w=640&q=75 640w, /_next/image?url=%2F&w=750&q=75 750w, /_next/image?url=%2F&w=828&q=75 828w, /_next/image?url=%2F&w=1080&q=75 1080w, /_next/image?url=%2F&w=1200&q=75 1200w, /_next/image?url=%2F&w=1920&q=75 1920w, /_next/image?url=%2F&w=2048&q=75 2048w, /_next/image?url=%2F&w=3840&q=75 3840w"
        style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; object-fit: cover; color: transparent;"
      />
    </div>
    <span
      aria-label="Популярность"
      class="absolute z-200 top-0 left-0 w-10 h-10 overflow-hidden flex items-center justify-center rounded-1 border-2 border-blue-700 dark:border-blue-400 bg-neutral-200 dark:bg-dark-neutral-300 text-blue-700 dark:text-blue-300 font-bold transition-colors duration-150 transition-colors duration-150"
    >
      80
    </span>
  </a>
  <div
    class="absolute left-0 w-full flex flex-col p-2 bg-gradient-to-t z-100 duration-150  bottom-0 from-neutral-100/95 to-neutral-100/50 dark:from-dark-neutral-100/95 dark:to-dark-neutral-100/40"
  />
</div>
`;

exports[`MovieCard tests is a basic snapshot 1`] = `
<div
  class="flex flex-col relative overflow-hidden "
  data-testid="test-movie-card"
>
  <a
    class="block relative group aspect-[16/9]"
    href="/movies/1"
  >
    <div
      class="relative h-full overflow-hidden bg-neutral-200 dark:bg-dark-neutral-300 object-cover rounded-3 transition-colors duration-150"
    >
      <div
        aria-hidden="true"
        class="bg-neutral-400 dark:bg-dark-neutral-300 max-w-full transition-colors duration-150  [&]:absolute top-0 left-0 z-100 relative overflow-hidden isolate before:absolute before:inset-0 before:-translate-x-full before:animate-skeleton before:bg-gradient-to-r before:from-transparent before:via-neutral-0/50 dark:before:via-neutral-0/25 before:to-transparent before:transition-colors before:duration-150"
        style="width: 100%; height: 100%;"
      />
      <img
        alt="alternative text"
        data-nimg="fill"
        decoding="async"
        loading="lazy"
        sizes="100vw"
        src="http://localhost/_next/image?url=%2F&w=3840&q=75"
        srcset="/_next/image?url=%2F&w=640&q=75 640w, /_next/image?url=%2F&w=750&q=75 750w, /_next/image?url=%2F&w=828&q=75 828w, /_next/image?url=%2F&w=1080&q=75 1080w, /_next/image?url=%2F&w=1200&q=75 1200w, /_next/image?url=%2F&w=1920&q=75 1920w, /_next/image?url=%2F&w=2048&q=75 2048w, /_next/image?url=%2F&w=3840&q=75 3840w"
        style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; object-fit: cover; color: transparent;"
      />
    </div>
  </a>
  <div
    class="absolute left-0 w-full flex flex-col p-2 bg-gradient-to-t z-100 duration-150  bottom-0 from-neutral-100/95 to-neutral-100/50 dark:from-dark-neutral-100/95 dark:to-dark-neutral-100/40"
  />
</div>
`;

exports[`MovieCard tests is a snapshot with appearance equal to "primary" 1`] = `
<div
  class="flex flex-col relative overflow-hidden "
  data-testid="test-movie-card"
>
  <a
    class="block relative group aspect-[16/9]"
    href="/tv/1"
    title="test title"
  >
    <div
      class="relative h-full overflow-hidden bg-neutral-200 dark:bg-dark-neutral-300 object-cover rounded-3 transition-colors duration-150"
    >
      <div
        aria-hidden="true"
        class="bg-neutral-400 dark:bg-dark-neutral-300 max-w-full transition-colors duration-150  [&]:absolute top-0 left-0 z-100 relative overflow-hidden isolate before:absolute before:inset-0 before:-translate-x-full before:animate-skeleton before:bg-gradient-to-r before:from-transparent before:via-neutral-0/50 dark:before:via-neutral-0/25 before:to-transparent before:transition-colors before:duration-150"
        style="width: 100%; height: 100%;"
      />
      <img
        alt="alternative text"
        data-nimg="fill"
        decoding="async"
        loading="lazy"
        sizes="100vw"
        src="http://localhost/_next/image?url=%2F&w=3840&q=75"
        srcset="/_next/image?url=%2F&w=640&q=75 640w, /_next/image?url=%2F&w=750&q=75 750w, /_next/image?url=%2F&w=828&q=75 828w, /_next/image?url=%2F&w=1080&q=75 1080w, /_next/image?url=%2F&w=1200&q=75 1200w, /_next/image?url=%2F&w=1920&q=75 1920w, /_next/image?url=%2F&w=2048&q=75 2048w, /_next/image?url=%2F&w=3840&q=75 3840w"
        style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; object-fit: cover; color: transparent;"
      />
    </div>
  </a>
  <div
    class="absolute left-0 w-full flex flex-col p-2 bg-gradient-to-t z-100 duration-150  bottom-0 from-neutral-100/95 to-neutral-100/50 dark:from-dark-neutral-100/95 dark:to-dark-neutral-100/40"
  >
    <h6
      class="leading-[1.25] -tracking-[0.01em] transition-colors duration-150 text-200 font-bold [&]:text-200 leading-[1.25] mb-1 sm:text-[1.125rem]"
    >
      <a
        class="break-all [&]:text-neutral-1000 dark:[&]:text-dark-neutral-1100 hover:[&]:text-neutral-800 active:[&]:text-neutral-700 dark:hover:[&]:text-dark-neutral-900 dark:active:[&]:text-dark-neutral-800 transition-colors duration-150 line-clamp-1"
        href="/tv/1"
        title="test title"
      >
        test title
      </a>
    </h6>
  </div>
</div>
`;

exports[`MovieCard tests is a snapshot with appearance equal to "secondary" 1`] = `
<div
  class="flex flex-col relative  "
  data-testid="test-movie-card"
>
  <a
    class="block relative group aspect-[16/9] mb-2 transition-transform duration-150 scale-100 hover:scale-[1.025]"
    href="/tv/1"
    title="test title"
  >
    <div
      class="relative h-full overflow-hidden bg-neutral-200 dark:bg-dark-neutral-300 object-cover rounded-3 transition-colors duration-150"
    >
      <div
        aria-hidden="true"
        class="bg-neutral-400 dark:bg-dark-neutral-300 max-w-full transition-colors duration-150  [&]:absolute top-0 left-0 z-100 relative overflow-hidden isolate before:absolute before:inset-0 before:-translate-x-full before:animate-skeleton before:bg-gradient-to-r before:from-transparent before:via-neutral-0/50 dark:before:via-neutral-0/25 before:to-transparent before:transition-colors before:duration-150"
        style="width: 100%; height: 100%;"
      />
      <img
        alt="alternative text"
        data-nimg="fill"
        decoding="async"
        loading="lazy"
        sizes="100vw"
        src="http://localhost/_next/image?url=%2F&w=3840&q=75"
        srcset="/_next/image?url=%2F&w=640&q=75 640w, /_next/image?url=%2F&w=750&q=75 750w, /_next/image?url=%2F&w=828&q=75 828w, /_next/image?url=%2F&w=1080&q=75 1080w, /_next/image?url=%2F&w=1200&q=75 1200w, /_next/image?url=%2F&w=1920&q=75 1920w, /_next/image?url=%2F&w=2048&q=75 2048w, /_next/image?url=%2F&w=3840&q=75 3840w"
        style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; object-fit: cover; color: transparent;"
      />
    </div>
  </a>
  <h6
    class="leading-[1.25] -tracking-[0.01em] transition-colors duration-150 text-200 font-bold [&]:text-200 leading-[1.25] mb-1 sm:text-[1.125rem]"
  >
    <a
      class="break-all [&]:text-neutral-1000 dark:[&]:text-dark-neutral-1100 hover:[&]:text-neutral-800 active:[&]:text-neutral-700 dark:hover:[&]:text-dark-neutral-900 dark:active:[&]:text-dark-neutral-800 transition-colors duration-150 line-clamp-2"
      href="/tv/1"
      title="test title"
    >
      test title
    </a>
  </h6>
</div>
`;

exports[`MovieCard tests is a snapshot with mediaType equal to "movie" 1`] = `
<div
  class="flex flex-col relative overflow-hidden "
  data-testid="test-movie-card"
>
  <a
    class="block relative group aspect-[16/9]"
    href="/movies/1"
    title="test title"
  >
    <div
      class="relative h-full overflow-hidden bg-neutral-200 dark:bg-dark-neutral-300 object-cover rounded-3 transition-colors duration-150"
    >
      <div
        aria-hidden="true"
        class="bg-neutral-400 dark:bg-dark-neutral-300 max-w-full transition-colors duration-150  [&]:absolute top-0 left-0 z-100 relative overflow-hidden isolate before:absolute before:inset-0 before:-translate-x-full before:animate-skeleton before:bg-gradient-to-r before:from-transparent before:via-neutral-0/50 dark:before:via-neutral-0/25 before:to-transparent before:transition-colors before:duration-150"
        style="width: 100%; height: 100%;"
      />
      <img
        alt="alternative text"
        data-nimg="fill"
        decoding="async"
        loading="lazy"
        sizes="100vw"
        src="http://localhost/_next/image?url=%2F&w=3840&q=75"
        srcset="/_next/image?url=%2F&w=640&q=75 640w, /_next/image?url=%2F&w=750&q=75 750w, /_next/image?url=%2F&w=828&q=75 828w, /_next/image?url=%2F&w=1080&q=75 1080w, /_next/image?url=%2F&w=1200&q=75 1200w, /_next/image?url=%2F&w=1920&q=75 1920w, /_next/image?url=%2F&w=2048&q=75 2048w, /_next/image?url=%2F&w=3840&q=75 3840w"
        style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; object-fit: cover; color: transparent;"
      />
    </div>
  </a>
  <div
    class="absolute left-0 w-full flex flex-col p-2 bg-gradient-to-t z-100 duration-150  bottom-0 from-neutral-100/95 to-neutral-100/50 dark:from-dark-neutral-100/95 dark:to-dark-neutral-100/40"
  >
    <h6
      class="leading-[1.25] -tracking-[0.01em] transition-colors duration-150 text-200 font-bold [&]:text-200 leading-[1.25] mb-1 sm:text-[1.125rem]"
    >
      <a
        class="break-all [&]:text-neutral-1000 dark:[&]:text-dark-neutral-1100 hover:[&]:text-neutral-800 active:[&]:text-neutral-700 dark:hover:[&]:text-dark-neutral-900 dark:active:[&]:text-dark-neutral-800 transition-colors duration-150 line-clamp-1"
        href="/movies/1"
        title="test title"
      >
        test title
      </a>
    </h6>
  </div>
</div>
`;

exports[`MovieCard tests is a snapshot with mediaType equal to "tv" 1`] = `
<div
  class="flex flex-col relative overflow-hidden "
  data-testid="test-movie-card"
>
  <a
    class="block relative group aspect-[16/9]"
    href="/tv/1"
    title="test title"
  >
    <div
      class="relative h-full overflow-hidden bg-neutral-200 dark:bg-dark-neutral-300 object-cover rounded-3 transition-colors duration-150"
    >
      <div
        aria-hidden="true"
        class="bg-neutral-400 dark:bg-dark-neutral-300 max-w-full transition-colors duration-150  [&]:absolute top-0 left-0 z-100 relative overflow-hidden isolate before:absolute before:inset-0 before:-translate-x-full before:animate-skeleton before:bg-gradient-to-r before:from-transparent before:via-neutral-0/50 dark:before:via-neutral-0/25 before:to-transparent before:transition-colors before:duration-150"
        style="width: 100%; height: 100%;"
      />
      <img
        alt="alternative text"
        data-nimg="fill"
        decoding="async"
        loading="lazy"
        sizes="100vw"
        src="http://localhost/_next/image?url=%2F&w=3840&q=75"
        srcset="/_next/image?url=%2F&w=640&q=75 640w, /_next/image?url=%2F&w=750&q=75 750w, /_next/image?url=%2F&w=828&q=75 828w, /_next/image?url=%2F&w=1080&q=75 1080w, /_next/image?url=%2F&w=1200&q=75 1200w, /_next/image?url=%2F&w=1920&q=75 1920w, /_next/image?url=%2F&w=2048&q=75 2048w, /_next/image?url=%2F&w=3840&q=75 3840w"
        style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; object-fit: cover; color: transparent;"
      />
    </div>
  </a>
  <div
    class="absolute left-0 w-full flex flex-col p-2 bg-gradient-to-t z-100 duration-150  bottom-0 from-neutral-100/95 to-neutral-100/50 dark:from-dark-neutral-100/95 dark:to-dark-neutral-100/40"
  >
    <h6
      class="leading-[1.25] -tracking-[0.01em] transition-colors duration-150 text-200 font-bold [&]:text-200 leading-[1.25] mb-1 sm:text-[1.125rem]"
    >
      <a
        class="break-all [&]:text-neutral-1000 dark:[&]:text-dark-neutral-1100 hover:[&]:text-neutral-800 active:[&]:text-neutral-700 dark:hover:[&]:text-dark-neutral-900 dark:active:[&]:text-dark-neutral-800 transition-colors duration-150 line-clamp-1"
        href="/tv/1"
        title="test title"
      >
        test title
      </a>
    </h6>
  </div>
</div>
`;

exports[`MovieCard tests is a snapshot with showRating 1`] = `
<div
  class="flex flex-col relative overflow-hidden "
  data-testid="test-movie-card"
>
  <a
    class="block relative group aspect-[16/9]"
    href="/movies/1"
    title="test title"
  >
    <div
      class="relative h-full overflow-hidden bg-neutral-200 dark:bg-dark-neutral-300 object-cover rounded-3 transition-colors duration-150"
    >
      <div
        aria-hidden="true"
        class="bg-neutral-400 dark:bg-dark-neutral-300 max-w-full transition-colors duration-150  [&]:absolute top-0 left-0 z-100 relative overflow-hidden isolate before:absolute before:inset-0 before:-translate-x-full before:animate-skeleton before:bg-gradient-to-r before:from-transparent before:via-neutral-0/50 dark:before:via-neutral-0/25 before:to-transparent before:transition-colors before:duration-150"
        style="width: 100%; height: 100%;"
      />
      <img
        alt="alternative text"
        data-nimg="fill"
        decoding="async"
        loading="lazy"
        sizes="100vw"
        src="http://localhost/_next/image?url=%2F&w=3840&q=75"
        srcset="/_next/image?url=%2F&w=640&q=75 640w, /_next/image?url=%2F&w=750&q=75 750w, /_next/image?url=%2F&w=828&q=75 828w, /_next/image?url=%2F&w=1080&q=75 1080w, /_next/image?url=%2F&w=1200&q=75 1200w, /_next/image?url=%2F&w=1920&q=75 1920w, /_next/image?url=%2F&w=2048&q=75 2048w, /_next/image?url=%2F&w=3840&q=75 3840w"
        style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; object-fit: cover; color: transparent;"
      />
    </div>
    <span
      aria-label="Popularity"
      class="absolute z-200 top-0 left-0 w-10 h-10 overflow-hidden flex items-center justify-center rounded-1 border-2 border-blue-700 dark:border-blue-400 bg-neutral-200 dark:bg-dark-neutral-300 text-blue-700 dark:text-blue-300 font-bold transition-colors duration-150 transition-colors duration-150"
    >
      80
    </span>
  </a>
  <div
    class="absolute left-0 w-full flex flex-col p-2 bg-gradient-to-t z-100 duration-150  bottom-0 from-neutral-100/95 to-neutral-100/50 dark:from-dark-neutral-100/95 dark:to-dark-neutral-100/40"
  >
    <h6
      class="leading-[1.25] -tracking-[0.01em] transition-colors duration-150 text-200 font-bold [&]:text-200 leading-[1.25] mb-1 sm:text-[1.125rem]"
    >
      <a
        class="break-all [&]:text-neutral-1000 dark:[&]:text-dark-neutral-1100 hover:[&]:text-neutral-800 active:[&]:text-neutral-700 dark:hover:[&]:text-dark-neutral-900 dark:active:[&]:text-dark-neutral-800 transition-colors duration-150 line-clamp-1"
        href="/movies/1"
        title="test title"
      >
        test title
      </a>
    </h6>
  </div>
</div>
`;

exports[`MovieCard tests is a snapshot with title 1`] = `
<div
  class="flex flex-col relative overflow-hidden "
  data-testid="test-movie-card"
>
  <a
    class="block relative group aspect-[16/9]"
    href="/movies/1"
    title="test title"
  >
    <div
      class="relative h-full overflow-hidden bg-neutral-200 dark:bg-dark-neutral-300 object-cover rounded-3 transition-colors duration-150"
    >
      <div
        aria-hidden="true"
        class="bg-neutral-400 dark:bg-dark-neutral-300 max-w-full transition-colors duration-150  [&]:absolute top-0 left-0 z-100 relative overflow-hidden isolate before:absolute before:inset-0 before:-translate-x-full before:animate-skeleton before:bg-gradient-to-r before:from-transparent before:via-neutral-0/50 dark:before:via-neutral-0/25 before:to-transparent before:transition-colors before:duration-150"
        style="width: 100%; height: 100%;"
      />
      <img
        alt="alternative text"
        data-nimg="fill"
        decoding="async"
        loading="lazy"
        sizes="100vw"
        src="http://localhost/_next/image?url=%2F&w=3840&q=75"
        srcset="/_next/image?url=%2F&w=640&q=75 640w, /_next/image?url=%2F&w=750&q=75 750w, /_next/image?url=%2F&w=828&q=75 828w, /_next/image?url=%2F&w=1080&q=75 1080w, /_next/image?url=%2F&w=1200&q=75 1200w, /_next/image?url=%2F&w=1920&q=75 1920w, /_next/image?url=%2F&w=2048&q=75 2048w, /_next/image?url=%2F&w=3840&q=75 3840w"
        style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; object-fit: cover; color: transparent;"
      />
    </div>
  </a>
  <div
    class="absolute left-0 w-full flex flex-col p-2 bg-gradient-to-t z-100 duration-150  bottom-0 from-neutral-100/95 to-neutral-100/50 dark:from-dark-neutral-100/95 dark:to-dark-neutral-100/40"
  >
    <h6
      class="leading-[1.25] -tracking-[0.01em] transition-colors duration-150 text-200 font-bold [&]:text-200 leading-[1.25] mb-1 sm:text-[1.125rem]"
    >
      <a
        class="break-all [&]:text-neutral-1000 dark:[&]:text-dark-neutral-1100 hover:[&]:text-neutral-800 active:[&]:text-neutral-700 dark:hover:[&]:text-dark-neutral-900 dark:active:[&]:text-dark-neutral-800 transition-colors duration-150 line-clamp-1"
        href="/movies/1"
        title="test title"
      >
        test title
      </a>
    </h6>
  </div>
</div>
`;

exports[`MovieCard tests is a snapshot with variant equal to "horizontal" 1`] = `
<div
  class="flex flex-col relative overflow-hidden "
  data-testid="test-movie-card"
>
  <a
    class="block relative group aspect-[16/9]"
    href="/tv/1"
    title="test title"
  >
    <div
      class="relative h-full overflow-hidden bg-neutral-200 dark:bg-dark-neutral-300 object-cover rounded-3 transition-colors duration-150"
    >
      <div
        aria-hidden="true"
        class="bg-neutral-400 dark:bg-dark-neutral-300 max-w-full transition-colors duration-150  [&]:absolute top-0 left-0 z-100 relative overflow-hidden isolate before:absolute before:inset-0 before:-translate-x-full before:animate-skeleton before:bg-gradient-to-r before:from-transparent before:via-neutral-0/50 dark:before:via-neutral-0/25 before:to-transparent before:transition-colors before:duration-150"
        style="width: 100%; height: 100%;"
      />
      <img
        alt="alternative text"
        data-nimg="fill"
        decoding="async"
        loading="lazy"
        sizes="100vw"
        src="http://localhost/_next/image?url=%2F&w=3840&q=75"
        srcset="/_next/image?url=%2F&w=640&q=75 640w, /_next/image?url=%2F&w=750&q=75 750w, /_next/image?url=%2F&w=828&q=75 828w, /_next/image?url=%2F&w=1080&q=75 1080w, /_next/image?url=%2F&w=1200&q=75 1200w, /_next/image?url=%2F&w=1920&q=75 1920w, /_next/image?url=%2F&w=2048&q=75 2048w, /_next/image?url=%2F&w=3840&q=75 3840w"
        style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; object-fit: cover; color: transparent;"
      />
    </div>
  </a>
  <div
    class="absolute left-0 w-full flex flex-col p-2 bg-gradient-to-t z-100 duration-150  bottom-0 from-neutral-100/95 to-neutral-100/50 dark:from-dark-neutral-100/95 dark:to-dark-neutral-100/40"
  >
    <h6
      class="leading-[1.25] -tracking-[0.01em] transition-colors duration-150 text-200 font-bold [&]:text-200 leading-[1.25] mb-1 sm:text-[1.125rem]"
    >
      <a
        class="break-all [&]:text-neutral-1000 dark:[&]:text-dark-neutral-1100 hover:[&]:text-neutral-800 active:[&]:text-neutral-700 dark:hover:[&]:text-dark-neutral-900 dark:active:[&]:text-dark-neutral-800 transition-colors duration-150 line-clamp-1"
        href="/tv/1"
        title="test title"
      >
        test title
      </a>
    </h6>
  </div>
</div>
`;

exports[`MovieCard tests is a snapshot with variant equal to "vertical" 1`] = `
<div
  class="flex flex-col relative overflow-hidden "
  data-testid="test-movie-card"
>
  <a
    class="block relative group aspect-[5/7]"
    href="/tv/1"
    title="test title"
  >
    <div
      class="relative h-full overflow-hidden bg-neutral-200 dark:bg-dark-neutral-300 object-cover rounded-3 transition-colors duration-150"
    >
      <div
        aria-hidden="true"
        class="bg-neutral-400 dark:bg-dark-neutral-300 max-w-full transition-colors duration-150  [&]:absolute top-0 left-0 z-100 relative overflow-hidden isolate before:absolute before:inset-0 before:-translate-x-full before:animate-skeleton before:bg-gradient-to-r before:from-transparent before:via-neutral-0/50 dark:before:via-neutral-0/25 before:to-transparent before:transition-colors before:duration-150"
        style="width: 100%; height: 100%;"
      />
      <img
        alt="alternative text"
        data-nimg="fill"
        decoding="async"
        loading="lazy"
        sizes="100vw"
        src="http://localhost/_next/image?url=%2F&w=3840&q=75"
        srcset="/_next/image?url=%2F&w=640&q=75 640w, /_next/image?url=%2F&w=750&q=75 750w, /_next/image?url=%2F&w=828&q=75 828w, /_next/image?url=%2F&w=1080&q=75 1080w, /_next/image?url=%2F&w=1200&q=75 1200w, /_next/image?url=%2F&w=1920&q=75 1920w, /_next/image?url=%2F&w=2048&q=75 2048w, /_next/image?url=%2F&w=3840&q=75 3840w"
        style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; object-fit: cover; color: transparent;"
      />
    </div>
    <div
      class="absolute left-0 w-full flex flex-col p-2 bg-gradient-to-t z-100 duration-150  invisible opacity-0 fine-pointer:group-hover:visible fine-pointer:group-hover:opacity-100 top-0 pt-[3.125rem] justify-end h-full bg-neutral-100/80 dark:bg-dark-neutral-100/80 transition-[visibility,opacity]"
    />
  </a>
  <h6
    class="leading-[1.25] -tracking-[0.01em] transition-colors duration-150 text-200 font-bold [&]:text-200 leading-[1.25] mt-2"
  >
    <a
      class="break-all [&]:text-neutral-1000 dark:[&]:text-dark-neutral-1100 hover:[&]:text-neutral-800 active:[&]:text-neutral-700 dark:hover:[&]:text-dark-neutral-900 dark:active:[&]:text-dark-neutral-800 transition-colors duration-150 line-clamp-2"
      href="/tv/1"
      title="test title"
    >
      test title
    </a>
  </h6>
</div>
`;
